overflow solved

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
   /* scroll-padding-top: 7rem; */
 }
 
@@ -152,4 +153,5 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-sans);
+  overflow-x: hidden;
 }
